--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "tp-rest-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Vadim Sobinin",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
